Fix page page width overflow

--- a/app/[locale]/timer/page.module.scss
+++ b/app/[locale]/timer/page.module.scss
@@ -8,6 +8,7 @@
   flex-grow: 1;
   flex-direction: column;
   // padding: 1rem 0 0.25rem 0;
+  width: 100%;
 }
 
 .container {
